# bilby

./: .coveragerc  .dictionary.txt  .distance_marginalization_lookup.npz  .git-blame-ignore-revs  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  AI_POLICY.md  AUTHORS.md  CHANGELOG.md  CONTRIBUTING.md  MANIFEST.in  MIGRATION.md  Pipfile  README.md  README.rst  TLDR_MULTINEST.md  gw_requirements.txt  jax_requirements.txt  mcmc_requirements.txt  optional_requirements.txt  parameter_tests.py  pyproject.toml  requirements.txt  sampler_requirements.txt  setup.cfg  setup.py  test_runner.py  tests.py  waveform_generator_tests.py
.devcontainer/: README.md  devcontainer.json
.devcontainer/gw/: devcontainer.json
.devcontainer/gw-container/: Dockerfile  devcontainer.json
.devcontainer/nogw-container/: Dockerfile  devcontainer.json
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: basic-install.yml  build-containers.yml  latest-dynesty.yml  pages.yml  pre-commit.yml  publish.yml  unit-tests.yml
MyStuff/: GW150914_run  Results_text.py  Try.ipynb  generate_noise_from_power_spectral_density.py  try.py
MyStuff/prior_files/: GW150914_only4.prior
bilby/: __init__.py
bilby/bilby_mcmc/: __init__.py  chain.py  flows.py  proposals.py  sampler.py  utils.py
bilby/compat/: jax.py  patches.py  types.py  utils.py
bilby/core/: __init__.py  fisher.py  fisher_matrix.py  fisher_sampler.py  grid.py  likelihood.py  prior.py  result.py  series.py  utils.py
bilby/gw/: __init__.py  calibration.py  conversion.py  cosmology.py  detector.py  geometry.py  jaxstuff.py  likelihood.py  prior.py  result.py  series.py  source.py  time.py  utils.py  waveform_generator.py
bilby/hyper/: __init__.py  likelihood.py  model.py
cli_bilby/: bilby_result.py  plot_multiple_posteriors.py  resume.py
cli_tupak/: plot_multiple_posteriors.py
containers/: Dockerfile  Dockerfile-bilby  Dockerfile-test-suite-python27  Dockerfile-test-suite-python37  Singularity.0.3.3  Singularity.0.3.5  Singularity.0.3.6  Singularity.0.4.0  Singularity.0.4.1  dockerfile-template  env-template.yml  environment.yml  v2-dockerfile-test-suite-python35  v2-dockerfile-test-suite-python36  v2-dockerfile-test-suite-python37  v2-dockerfile-test-suite-python38  v3-dockerfile-test-suite-python310  v3-dockerfile-test-suite-python311  v3-dockerfile-test-suite-python312  v3-dockerfile-test-suite-python313  v3-dockerfile-test-suite-python314  v3-dockerfile-test-suite-python37  v3-dockerfile-test-suite-python38  v3-dockerfile-test-suite-python39  write_dockerfiles.py
docs/: Makefile  array_api.rst  basics-of-parameter-estimation.txt  bilby-mcmc-guide.txt  bilby-output.txt  citing-bilby.txt  code-overview.txt  compact-binary-coalescence-parameter-estimation.txt  conf.py  containers.txt  conversion.txt  dynesty-guide.txt  examples.txt  faq.txt  gw_eos.txt  gw_likelihood.txt  gw_prior.txt  gw_references.txt  hyperparameters.txt  index.txt  installation.txt  likelihood.txt  parameters.txt  plugins.txt  prior.txt  requirements.txt  rng.rst  robots.txt  samplers.txt  transient-gw-data.txt  tupak-output.txt  writing-documentation.txt
docs/templates/: custom-class-template.rst  custom-module-template.rst
examples/: README.rst
examples/core_examples/: 15d_gaussian.py  README.md  conditional_prior.py  dirichlet.py  fisher.py  fisher_example.py  gaussian_example.py  gaussian_process_celerite_example.py  gaussian_process_george_example.py  grid_example.py  hyper_parameter_example.py  linear_regression.py  linear_regression_grid.py  linear_regression_pymc3.py  linear_regression_pymc3_custom_likelihood.py  linear_regression_unknown_noise.py  linear_regression_with_Fisher.py  multidimensional_gaussian.py  multivariate_gaussian_prior.py  occam_factor_example.py  radioactive_decay.py  slabspike_example.py  starting_mcmc_chains_near_to_the_peak.py
examples/injection_examples/: australian_detector.py  basic_tutorial.py  basic_tutorial_dist_time_phase_marg.py  basic_tutorial_time_phase_marg.py  binary_neutron_star_example.py  calibration_example.py  change_sampled_parameters.py  create_your_own_source_model.py  create_your_own_time_domain_source_model.py  custom_proposal_example.py  eccentric_GW150914_inspiral.py  eccentric_inspiral.py  fast_tutorial.py  how_to_specify_the_prior.py  injection.py  marginalized_likelihood.py  non_tensor.py  plot_skymap.py  plot_time_domain_data.py  roq_example.py  sine_gaussian_example.py  standard_15d_cbc_tutorial.py  time_domain_source_model.py  using_gwin.py
examples/logo/: sample_logo.py
examples/open_data_examples/: GW150914.py  GW150914_advanced.py  GW150914_minimal.py  GW170817.py  (+1 more)
peyote/: Source.py  __init__.py  detector.py  detectors.py  likelihood.py  parameter.py  prior.py  result.py  sampler.py  source.py  utils.py  waveform_generator.py
singularity/: Singularity.0.3.3
test/: calibration_test.py  calibration_tests.py  check_author_list.py  ci_test_imports.sh  conftest.py  context.py  conversion_test.py  conversion_tests.py  cosmology_test.py  detector_test.py  detector_tests.py  example_test.py  example_tests.py  grid_test.py  gw_eos_test.py  gw_example_test.py  gw_example_tests.py  gw_likelihood_test.py  gw_likelihood_tests.py  gw_plot_test.py  gw_prior_test.py  gw_prior_tests.py  gw_result_test.py  gw_source_test.py  gw_utils_test.py  hyper_pe_test.py  import_test.py  likelihood_test.py  likelihood_tests.py  make_standard_data.py  noise_realisation_test.py  noise_realisation_tests.py  other_test.py  other_tests.py  parameter_tests.py  prior_test.py  prior_tests.py  proposal_test.py  result_test.py  sample_from_the_prior_test.py  (+12 more)
tupak/: .version  __init__.py  conversion.py  detector.py  likelihood.py  prior.py  result.py  sampler.py  source.py  utils.py  waveform_generator.py
tutorials/: 150914_PSD_H1.txt  150914_PSD_L1.txt  BasicTutorial.ipynb  BasicTutorial.py  Compare_samplers.ipynb  GW150914.ipynb  GW150914.py  Injection.py  Sample.py  create_your_own_source_model.py  custom_source_tutorial.py  make_standard_data.py  source_model_tutorial.py  standard_data.txt
(+379 files in other folders)
