[flake8]
exclude = .git,docs,build,dist,test,*__init__.py
max-line-length = 120
ignore = E129 W503 W504 W605 E203 E402

[tool:pytest]
addopts =
    --ignore test/gw/other_test.py
    --ignore test/gw/example_test.py
    --ignore test/core/example_test.py
    --ignore test/gw/sample_from_the_prior_test.py
    --ignore test/gw/plot_test.py
    --ignore test/core/sampler/sampler_run_test.py

[metadata]
license_file = LICENSE.md
