[flake8]
exclude = .git,docs,build,dist,test,*__init__.py
max-line-length = 120
ignore = E129 W503 W504 W605 E203 E402

[tool:pytest]
addopts =
    --ignore test/integration/other_test.py
    --ignore test/integration/example_test.py
    --ignore test/integration/sample_from_the_prior_test.py
    --ignore test/gw/plot_test.py
    --ignore test/integration/sampler_run_test.py

[metadata]
license_file = LICENSE.md
