[flake8]
exclude = .git,docs,build,dist,test,*__init__.py
max-line-length = 120
ignore = E129 W503 W504 E203 E402

[tool:pytest]
addopts =
    --ignore test/import_test.py
    --ignore test/integration/other_test.py
    --ignore test/integration/example_test.py
    --ignore test/integration/sample_from_the_prior_test.py
    --ignore test/gw/plot_test.py
    --ignore test/integration/sampler_run_test.py

[metadata]
name = bilby
license_file = LICENSE.md

[isort]
known_third_party = astropy,attr,bilby,deepdish,gwin,gwinc,gwpy,lal,lalsimulation,matplotlib,mock,nflows,numpy,packaging,pandas,past,pycbc,pymc3,pytest,scipy,setuptools,skimage,torch
